name:                iso-svg
version:             0.1.0.0
synopsis:            SVG Experiments
description:         Please see README.md
homepage:            http://github.com/j-mueller/iso-svg#readme
license:             BSD3
license-file:        LICENSE
author:              Jann Müller
maintainer:          j.mueller.11@ucl.ac.uk
copyright:           Copyright: (c) 2015 Jann Müller
category:            Web
build-type:          Simple
cabal-version:       >=1.10

homepage: https://github.com/j-mueller/iso-svg
bug-reports: https://github.com/j-mueller/iso-svg/issues

flag examples
  description: Build the examples
  default: False
  manual: False

library
  hs-source-dirs:      src
  exposed-modules:
      Graphics.Geometry
    , Graphics.Svg
  build-depends:
      base >= 4.7 && < 5
    , containers
    , lens
    , matrix
    , mtl
    , stm
    , text
  default-language:    Haskell2010

executable simple-example
  hs-source-dirs:    examples/simple
  main-is:           Main.hs
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  if !flag(examples)
    buildable: False
  else
    build-depends:
        base >= 4.7 && < 5
      , iso-svg
      , lens
      , mtl
      , text
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/j-mueller/iso-svg
